paper_experimental_results/2026-05-06T18-03-03/grok-code-fast-1/concepts/storage_duration_c6/sample_004/target.compile.log
error: usage of an `unsafe` block
 --> benchmark_results/2026-05-06T18-03-03/grok-code-fast-1/concepts/storage_duration_c6/sample_004/target.rs:5:16
  |
5 |     let addr = unsafe { &local as *const i32 as usize };
  |                ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: requested on the command line with `-F unsafe-code`

warning: unnecessary `unsafe` block
 --> benchmark_results/2026-05-06T18-03-03/grok-code-fast-1/concepts/storage_duration_c6/sample_004/target.rs:5:16
  |
5 |     let addr = unsafe { &local as *const i32 as usize };
  |                ^^^^^^ unnecessary `unsafe` block
  |
  = note: `#[warn(unused_unsafe)]` (part of `#[warn(unused)]`) on by default

error[E0381]: used binding `local` isn't initialized
 --> benchmark_results/2026-05-06T18-03-03/grok-code-fast-1/concepts/storage_duration_c6/sample_004/target.rs:5:25
  |
4 |     let local: i32;
  |         ----- binding declared here but left uninitialized
5 |     let addr = unsafe { &local as *const i32 as usize };
  |                         ^^^^^^ `local` used here but it isn't initialized
  |
help: consider assigning a value
  |
4 |     let local: i32 = 42;
  |                    ++++

error: aborting due to 2 previous errors; 1 warning emitted

For more information about this error, try `rustc --explain E0381`.